--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
                 </div>
                 
                 <!-- Hero Stack News Widget -->
-                <!-- Removed pb-8 to make bottom 0 accurate -->
                 <div class="lg:w-[480px] xl:w-[560px] shrink-0 relative h-[600px] flex items-end select-none">
                      <!-- Gradient Decoration -->
                     <div class="absolute -right-20 -top-20 h-64 w-64 rounded-full bg-gradient-to-br from-blue-400/20 to-purple-400/20 blur-3xl dark:from-blue-600/10 dark:to-purple-600/10 pointer-events-none hidden lg:block"></div>
@@ -63,11 +62,9 @@
                     <div id="hero-stack" class="relative w-full h-full perspective-[1200px] group/stack">
                         
                         <!-- Card 1 -->
-                        <!-- top-24 to allow visible space for back cards, bottom-0 to anchor to bottom -->
-                        <div class="hero-card absolute inset-x-0 bottom-0 top-24 rounded-[2rem] bg-gray-100 dark:bg-neutral-900 shadow-2xl overflow-hidden cursor-pointer transition-all duration-700 ease-[cubic-bezier(0.19,1,0.22,1)] will-change-transform group/card" data-link="product.html">
+                        <div class="hero-card absolute inset-x-0 bottom-0 top-24 rounded-[2rem] bg-gray-100 dark:bg-neutral-900 shadow-2xl overflow-hidden cursor-pointer transition-all duration-700 ease-[cubic-bezier(0.19,1,0.22,1)] will-change-transform group/card" data-link="fonts/qidiansans.html">
                              <img src="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251127/pFUu/680X600/111.jpg/webp" alt="Cover" class="size-full object-cover transition-all duration-700 group-hover/card:scale-105 group-hover/card:brightness-110">
                              <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/20 to-transparent"></div>
-                             <!-- Text at bottom-8 left-8 -->
                              <div class="absolute bottom-8 left-8 text-white text-shadow-subtle">
                                 <div class="flex items-center gap-2 mb-3">
                                     <span class="inline-block size-2 rounded-full bg-blue-500 shadow-[0_0_10px_rgba(59,130,246,0.5)]"></span>
@@ -165,7 +162,7 @@
                 title: '自在起点黑 (Qidian Sans)',
                 subtitle: '免费商用 • 双轴可变',
                 imageUrl: 'https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251127/YAWh/1400X600/1-07.jpg/webp',
-                link: 'product.html', 
+                link: 'fonts/qidiansans.html', 
                 colSpan: 'md:col-span-2',
                 rowSpan: 'md:row-span-2',
             },
